--- a/index.html
+++ b/index.html
@@ -23,132 +23,129 @@
         <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="/nosotros.html">Nosotros</a>
     </nav>
+
+
     <main class="contenedor">
         <h1>Nuestros Productos</h1>
         <div class="grid">
             <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">AngularJs</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">ReactJs</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">ReduxJs</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
+                <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">VueJS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
             </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">NodeJs</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">SaSS</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">HTML5</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">GITHUB</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">BulmaCSS</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">TypeScript</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">Drupal</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">JavaScript</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">GraphQL</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
-                    <div class="producto__informacion">
-                        <p class="producto__nombre">WordPress</p>
-                        <p class="producto__precio">25€</p>
-                    </div>
-                </a>
-            </div>
-    </main>
 
+            <div class="producto">
+                <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">AngularJS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">ReactJS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">ReduxJS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">NodeJS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">SaSS</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">HTML5</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">Github</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">Bulma</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">TypeScript</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">Drupal</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">JavaScript</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">GraphQL</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
+                <div class="producto__informacion">
+                    <p class="producto__nombre">WordPress</p>
+                    <p class="producto__precio">25€</p>
+                </div>
+            </div>
+
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
+
+
+        </div>
+    </main>
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2021.</p>
     </footer>
