--- a/nosotros.html
+++ b/nosotros.html
@@ -25,8 +25,67 @@
     </nav>
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Cras ac blandit purus. Cras scelerisque bibendum dolor, sit amet consectetur quam lacinia at.
+                    Praesent
+                    sit amet consectetur neque. Morbi in ex libero. Donec quis erat et ex laoreet vulputate in vitae
+                    libero.
+                    Cras bibendum massa et leo dapibus, quis hendrerit ipsum placerat. Phasellus sit amet convallis
+                    ligula.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut risus felis, imperdiet vitae
+                    ultrices
+                    vel, ultricies id risus. Duis luctus enim at mattis condimentum. Duis mollis eros ac ligula
+                    fringilla,
+                    eu fringilla diam porta. Aenean ac faucibus dui, vitae mattis mauris. Nunc vulputate turpis sem, eu
+                    semper neque efficitur at. Nulla mollis nisl in tortor interdum, ornare scelerisque dui ultricies.
+                </p>
+
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac erat. </p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
 
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porqué comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac erat</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Para DEVS</h3>
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac erat</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac erat</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac erat</p>
+            </div> <!--.bloque-->
+
+        </div> <!--bloques-->
+    </section>
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2021.</p>
 
