acabando pagina producto

--- a/producto.html
+++ b/producto.html
@@ -24,7 +24,38 @@
         <a class="navegacion__enlace" href="nosotros.html ">Nosotros</a>
     </nav>
     <main class="contenedor">
-        <h1> Producto</h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="imagen del producto">
+
+
+
+            <div class="camisa__contenido">
+                <p>Nullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non tellus non orci
+                    viverra
+                    bibendum eu ac eratNullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non
+                    tellus non orci
+                    viverra
+                    bibendum eu ac eratNullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non
+                    tellus non orci
+                    viverra
+                    bibendum eu ac eratNullam commodo lacinia nibh, eget sollicitudin urna posuere vel. Vestibulum non
+                    tellus non orci
+                    viverra
+                    bibendum eu ac erat </p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>--Seleccionar talla--</option>
+                        <option>Pequeña</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
